--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .link {
+    @apply hover:bg-navyblue h-14 w-48 flex items-center justify-center rounded-lg;
+  }
+  .active {
+    @apply bg-navyblue;
+  }
+  .center {
+    @apply flex items-center justify-center;
+  }
+}
